--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-redux": "^8.0.5",
     "sass": "^1.69.7",
     "typescript": "^4.4.2"
   },
